@@ -11,6 +11,8 @@
 # -------------------------------------------------------------
 # $Id$
 
+MPIRUN = mpirun
+NPROC = 4
 MODEL = ../../../mass2
 
 EPSFILES = \
