@@ -1,7 +1,7 @@
 #!MC 1400
 # Created by Tecplot 360 build 14.0.0.25097
 $!VarSet |LFDSRN1| = 'CGNS Loader'
-$!VarSet |LFDSFN1| = '"STANDARDSYNTAX" "1.0" "FILELIST_CGNSFILES" "1" "plot.cgns" "AverageToNodes" "No" "AveragingMethod" "Arithmetic" "SectionLoad" "Combine" "LoadBCs" "No" "AssignStrandIDs" "No" "LOADCONVERGENCEHISTORY" "No" "ZoneList" "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15," "VarList" "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,"'
+$!VarSet |LFDSFN1| = '"STANDARDSYNTAX" "1.0" "FILELIST_CGNSFILES" "1" "plot-UPWIND.cgns" "AverageToNodes" "No" "AveragingMethod" "Arithmetic" "SectionLoad" "Combine" "LoadBCs" "No" "AssignStrandIDs" "No" "LOADCONVERGENCEHISTORY" "No" "ZoneList" "0,1," "VarList" "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,"'
 $!SETSTYLEBASE FACTORY
 $!GLOBALLINKING 
   LINKCOLORMAPS = YES
@@ -883,7 +883,7 @@ $!PAGE
     ORIENTPORTRAIT = NO
     SHOWGRID = YES
     SHOWRULER = NO
-    SHOWPAPER = YES
+    SHOWPAPER = NO
     PAPERSIZE = LETTER
     RULERSPACING = ONEINCH
     PAPERGRIDSPACING = QUARTERINCH
@@ -900,28 +900,16 @@ $!READDATASET  '|LFDSFN1|'
   DATASETREADER = '|LFDSRN1|'
 $!REMOVEVAR |LFDSRN1|
 $!REMOVEVAR |LFDSFN1|
-$!ALTERDATA 
-  EQUATION = '{X} = {CoordinateX}*0.3048'
-$!ALTERDATA 
-  EQUATION = '{Y} = {CoordinateY}*0.3048'
-$!ALTERDATA 
-  EQUATION = '{X} = {CoordinateX}*0.3048'
-$!ALTERDATA 
-  EQUATION = '{Y} = {CoordinateY}*0.3048'
-$!ALTERDATA 
-  EQUATION = '{VX} = {VelocityX}*0.3048'
-$!ALTERDATA 
-  EQUATION = '{VY} = {VelocityY}*0.3048'
 $!FRAMELAYOUT 
   SHOWHEADER = NO
   HEADERCOLOR = RED
   XYPOS
     {
     X = 0.75
-    Y = 4.25
+    Y = 0.75
     }
   WIDTH = 9.5
-  HEIGHT = 3.5
+  HEIGHT = 7
 $!THREEDAXIS 
   ASPECTRATIOLIMIT = 200
   BOXASPECTRATIOLIMIT = 200
@@ -934,8 +922,6 @@ $!GLOBALRGB
   RANGEMIN = 0
   RANGEMAX = 1
 $!GLOBALCONTOUR  1
-  VAR = 20
-  DEFNUMLEVELS = 1
   LEGEND
     {
     XYPOS
@@ -943,24 +929,14 @@ $!GLOBALCONTOUR  1
       X = 95
       }
     }
-  COLORCUTOFF
-    {
-    RANGEMIN = 0.015736999324
-    RANGEMAX = 0.121895256552
-    }
   COLORMAPFILTER
     {
     CONTINUOUSCOLOR
       {
-      CMIN = -0.0373421292901
-      CMAX = 0.174974385166
+      CMIN = 0
+      CMAX = 1
       }
     }
-$!CONTOURLEVELS NEW
-  CONTOURGROUP = 1
-  RAWDATA
-1
-0
 $!GLOBALCONTOUR  2
   LEGEND
     {
@@ -1073,10 +1049,6 @@ $!GLOBALCONTOUR  8
       CMAX = 1
       }
     }
-$!GLOBALTWODVECTOR 
-  UVAR = 20
-  VVAR = 21
-  RELATIVELENGTH = 0.4
 $!GLOBALSCATTER 
   LEGEND
     {
@@ -1097,7 +1069,8 @@ $!FIELDMAP  [1]
     }
   CONTOUR
     {
-    COLOR = RED
+    CONTOURTYPE = FLOOD
+    COLOR = BLACK
     USELIGHTINGEFFECT = YES
     }
   VECTOR
@@ -1117,6 +1090,7 @@ $!FIELDMAP  [1]
     SHOW = YES
     EDGETYPE = BORDERSANDCREASES
     COLOR = BLACK
+    LINETHICKNESS = 0.1
     }
   POINTS
     {
@@ -1146,7 +1120,8 @@ $!FIELDMAP  [2]
     }
   CONTOUR
     {
-    COLOR = RED
+    CONTOURTYPE = FLOOD
+    COLOR = BLACK
     USELIGHTINGEFFECT = YES
     }
   VECTOR
@@ -1166,6 +1141,7 @@ $!FIELDMAP  [2]
     SHOW = YES
     EDGETYPE = BORDERSANDCREASES
     COLOR = BLACK
+    LINETHICKNESS = 0.1
     }
   POINTS
     {
@@ -1191,73 +1167,32 @@ $!FIELDMAP  [2]
 $!TWODAXIS 
   XDETAIL
     {
-    VARNUM = 18
+    VARNUM = 1
     }
   YDETAIL
     {
-    VARNUM = 19
+    VARNUM = 2
     }
 $!VIEW FIT
 $!TWODAXIS 
-  AXISMODE = INDEPENDENT
   DEPXTOYRATIO = 1
-  GRIDAREA
-    {
-    DRAWBORDER = YES
-    }
-  VIEWPORTPOSITION
-    {
-    X1 = 5.2632
-    Y1 = 7.1429
-    X2 = 97.368
-    Y2 = 92.857
-    }
-  VIEWPORTTOPSNAPTARGET = 92.8571428571
 $!TWODAXIS 
   XDETAIL
     {
-    RANGEMIN = -0.10000000000000000555
-    RANGEMAX = 5.5
-    AUTOGRID = NO
-    GRSPACING = 0.5
-    TICKLABEL
-      {
-      NUMFORMAT
-        {
-        FORMATTING = FIXEDFLOAT
-        PRECISION = 1
-        }
-      }
-    TITLE
-      {
-      TITLEMODE = USETEXT
-      }
+    RANGEMIN = 0
+    RANGEMAX = 17.718371659999998968
+    GRSPACING = 5
     }
 $!TWODAXIS 
   YDETAIL
     {
-    RANGEMIN = -0.10000000000000000555
-    RANGEMAX = 1
-    GRSPACING = 0.2
-    TICKLABEL
-      {
-      NUMFORMAT
-        {
-        FORMATTING = FIXEDFLOAT
-        PRECISION = 1
-        }
-      }
-    TITLE
-      {
-      TITLEMODE = USETEXT
-      }
+    RANGEMIN = 0
+    RANGEMAX = 13.403792736477194936
+    GRSPACING = 2
     }
 $!ISOSURFACEATTRIBUTES  1
   OBEYSOURCEZONEBLANKING = NO
   ISOSURFACESELECTION = ONESPECIFICVALUE
-  ISOVALUE1 = 0.015736999324
-  ISOVALUE2 = 0.068816127938
-  ISOVALUE3 = 0.121895256552
   MARCHINGCUBEALGORITHM = CLASSICPLUS
   EFFECTS
     {
@@ -1479,79 +1414,11 @@ $!SLICEATTRIBUTES  8
     LIGHTINGEFFECT = GOURAUD
     SURFACETRANSLUCENCY = 10
     }
-$!STREAMTRACE ADD
-  STREAMTYPE = TWODLINE
-  STREAMDIRECTION = BOTH
-  STARTPOS
-    {
-    X = 0.1
-    Y = 0.225
-    }
-$!STREAMTRACE ADD
-  STREAMTYPE = TWODLINE
-  STREAMDIRECTION = BOTH
-  STARTPOS
-    {
-    X = 0.1
-    Y = 0.45
-    }
-$!STREAMTRACE ADD
-  STREAMTYPE = TWODLINE
-  STREAMDIRECTION = BOTH
-  STARTPOS
-    {
-    X = 0.1
-    Y = 0.675
-    }
-$!STREAMTRACE ADD
-  STREAMTYPE = TWODLINE
-  STREAMDIRECTION = BOTH
-  STARTPOS
-    {
-    X = 1.8
-    Y = 0.152
-    }
-$!STREAMTRACE ADD
-  STREAMTYPE = TWODLINE
-  STARTPOS
-    {
-    X = 2.079
-    Y = 0.134
-    }
-$!STREAMTRACE ADD
-  STREAMTYPE = TWODLINE
-  STARTPOS
-    {
-    X = 1.988
-    Y = 0.107
-    }
-$!STREAMTRACE ADD
-  STREAMTYPE = TWODLINE
-  STARTPOS
-    {
-    X = 1.943
-    Y = 0.053
-    }
-$!STREAMTRACE ADD
-  STREAMTYPE = TWODLINE
-  STARTPOS
-    {
-    X = 1.988
-    Y = 0.107
-    }
-$!STREAMTRACE ADD
-  STREAMTYPE = TWODLINE
-  STARTPOS
-    {
-    X = 1.864
-    Y = 0.015
-    }
 $!STREAMATTRIBUTES 
   OBEYSOURCEZONEBLANKING = NO
   STREAMTIMING
     {
     MARKSIZE = 1
-    TIMEDELTA = 1.99917485763
     MARKSYMBOL
       {
       GEOMSHAPE = SPHERE
@@ -1564,15 +1431,12 @@ $!STREAMATTRIBUTES
       LIGHTINGEFFECT = GOURAUD
       }
     }
-  ADDARROWS = NO
+  MAXSTEPS = 10000
 $!FIELDLAYERS 
-  SHOWMESH = NO
-  SHOWCONTOUR = YES
   SHOWSHADE = YES
   USETRANSLUCENCY = YES
 $!STREAMTRACELAYERS 
-  SHOW = YES
-  SHOWARROWHEADS = NO
+  SHOW = NO
 $!FRAMECONTROL ACTIVATEBYNUMBER
   FRAME = 1
 $!SETSTYLEBASE CONFIG
