@@ -1,0 +1,10 @@
+#!MC 1000
+$!EXTRACTFROMPOLYLINE
+  EXTRACTLINEPOINTSONLY = FALSE
+  NUMPTS = 400
+  EXTRACTTOFILE = TRUE
+  FNAME = "probe.dat"
+  RAWDATA
+2
+ 0.1  @Y@ 0.0
+17.1  @Y@ 0.0
