@@ -30,7 +30,7 @@ UPWIND 0.0 1.0		diff_uv, blend_uv, blend_time	! u/v spatial differing scheme and
 0.0					uvel_initial	! initial uniform value of u velocity
 0.0					vvel_initial	! initial uniform value of v velocity
 5.0					conc_initial	! initial uniform value of concentration						
-3.2					wsel_or_depth_initial	! initial uniform value of depth OR water surface elv.
+0.492					wsel_or_depth_initial	! initial uniform value of depth OR water surface elv.
 0.0					uvel_wind		! uniform value of u wind velocity
 0.0					vvel_wind		! uniform value of v wind velocity
 F 0.0 0.0 0.0            ! do wet/dry, dry depth, rewet depth, zero depth
