@@ -19,7 +19,7 @@ T F			given_initial_wsel	! if TRUE then wsel_or_depth_initial is the initial wat
 5			number_scalar_iterations
 3			scalar_sweep	! internal iterations
 30			depth_sweep
-0.20001 F		eddy viscosity
+0.20001 F F 0.7		eddy viscosity
 0.0 F		kx_diff		! diffusion coeff in xsi (ft^2/sec)
 0.0 F		ky_diff		! diffusion coeff in eta (ft^2/sec)
 0.02600 F			chezy_con	! manning n value if manning=TRUE
