@@ -1,3 +1,11 @@
+2014-03-26  William A. Perkins  <william.perkins@pnnl.gov>
+
+	* test/flow/spur-dike-1: make plots work
+
+	* test/temperature/pond: make plots work
+
+	* test/transport/skew30: update configuration so it runs
+
 2013-02-12  William A. Perkins  <william.perkins@pnnl.gov>
 
 	* test/flow/Rodi/Makefile (NPROC): parallelize test
